[fix]: overflow Y in `web`

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -422,3 +422,15 @@
     @apply bg-background text-foreground;
   }
 }
+
+html,
+body {
+  height: 100vh;
+  overflow: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+#__next {
+  height: 100%;
+}
